--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Project</title>
-    <link rel="stylesheet" href="css/main.scss">
+    <link rel="stylesheet" href="css/main.scss" />
     <script type="module" src="js/main.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div data-relative-input="true" id="scene">
-        <div data-depth="0.2">My first Layer!</div>
-        <div data-depth="0.6">My second Layer!</div>
-      </div>
-</body>
+      <div data-depth="0.2">My first Layer!</div>
+      <div data-depth="0.6">My second Layer!</div>
+    </div>
+  </body>
 </html>
