--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
     <script type="module" src="js/main.js"></script>
   </head>
   <body>
-    <div data-relative-input="true" id="scene">
+    <!-- <div data-relative-input="true" id="scene"> -->
+    <!-- <div clipRelativeInput="true" id="scene"> -->
+    <div date-hover-only="true" data-relative-input="true" id="scene">
       <div data-depth="0.2">My first Layer!</div>
       <div data-depth="0.6">My second Layer!</div>
     </div>
