--- a/swiper/index.html
+++ b/swiper/index.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.css"
-    />
-    <link rel="stylesheet" href="style.scss" />
+    <!-- <link rel="stylesheet" href="../node_modules/swiper/swiper-bundle.css" /> -->
+    <link rel="stylesheet" href="style.css" />
     <script type="module" src="app.js"></script>
     <title>Document</title>
   </head>
