--- a/loading1/index.html
+++ b/loading1/index.html
@@ -10,6 +10,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Home</h2>
+    <a href="./about.html">About</a>
+    <br><br>
+    <img src="../img/010.jpeg" alt="">
+    <div class="loader"></div>
     
 </body>
 </html>
