--- a/loading1/about.html
+++ b/loading1/about.html
@@ -10,6 +10,12 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h2>About</h2>
+    <a href="./index.html">Index</a>
+    <br><br>
+    <img src="../img/020.jpeg" alt="">
+    <div class="loader"></div>
     
 </body>
 </html>
